fix: #198-predikcia-uspesnosti-na-BE opravene modely pre 4. rocnik